--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= book.description %></td>
         <td><%= book.author %></td>
         <td><%= book.price %></td>
-        <td><%= book.category %></td>
+        <td><%= book.category_name %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
