--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -33,9 +33,7 @@
 
   <div class="field">
     <%= form.label :category_id %>
-    <%= form.text_field :category_id %>
-  </div>
-
+    <%= form.collection_select :category_id, Category.all, :id, :name, prompt: :true %>
   <div class="actions">
     <%= form.submit %>
   </div>
