--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', book: @book %>
 
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<%= link_to 'Show', @book, class: 'waves-effect waves-light btn' %> 
+<%= link_to 'Back', books_path, class: 'waves-effect waves-light btn' %>
