--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,5 +25,5 @@
   <%= @book.category %>
 </p>
 
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<%= link_to 'Edit', edit_book_path(@book) , class: 'waves-effect waves-light btn' %> 
+<%= link_to 'Back', books_path, class: 'waves-effect waves-light btn' %>
