--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -21,7 +21,7 @@
     <%= form.text_area :description %>
   </div>
 
-  <div class="actions">
+  <div class="actions waves-effect waves-light btn">
     <%= form.submit %>
   </div>
 <% end %>
