--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,5 +10,5 @@
   <%= @category.description %>
 </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Edit', edit_category_path(@category), class: 'waves-effect waves-light btn' %> |
+<%= link_to 'Back', categories_path, class: 'waves-effect waves-light btn' %>
