--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,28 @@
 
   </head>
 
-  <body class="container">
-    <%= yield %>
+
+
+
+  <body>
+    <header class="navbar-fixed">
+      <nav class="teal darken-1">
+        <div class="nav-wrapper container">
+
+          <ul class="right" id="nav-mobile">
+            <li><a href="/">Home</a></li>
+            <li><a href="/categories"><span>Categories</span></a></li>
+            <li><a href="/books"><span>Books</span><span class="new badge">4</span></a></li>
+            <li><a href="/sign_in">
+              <span class="translation_missing">Sign In</span></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+     
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
