--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/categories"><span>Categories</span></a></li>
             <li><a href="/books"><span>Books</span><span class="new badge">4</span></a></li>
-            <li><a href="/sign_in">
+            <li><a href="/">
               <span class="translation_missing">Sign In</span></a>
             </li>
           </ul>
