Show the name of category in books show route

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @book.category %>
+  <%= @book.category_name %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) , class: 'waves-effect waves-light btn' %> 
