--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,6 +10,7 @@
       <th>Author</th>
       <th>Price</th>
       <th>Category</th>
+      <th>Likes</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= book.author %></td>
         <td><%= book.price %></td>
         <td><%= book.category_name %></td>
+        <td><%= book.likes %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
