--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,5 +10,10 @@
   <%= @category.description %>
 </p>
 
+<p>
+  <strong>Likes:</strong>
+  <%= @category.likes %>
+</p>
+
 <%= link_to 'Edit', edit_category_path(@category), class: 'waves-effect waves-light btn' %> |
 <%= link_to 'Back', categories_path, class: 'waves-effect waves-light btn' %>
